<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialSheetBottom_padding">

    <TextView
        android:id="@+id/dialBtSheetLoanTo_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:text="@string/dialBtSheetLoanTo_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialSheetBottom_margin"
        android:layout_marginEnd="@dimen/dialSheetBottom_margin"
        android:paddingBottom="@dimen/dialSheetBottom_padding"
        android:text="@string/loanToDial" />

    <Button
        android:id="@+id/dialBtSheetLoanTo_loanToEmail_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_loanTo_mail" />

    <Button
        android:id="@+id/dialBtSheetLoanTo_loanToFriend_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />


</LinearLayout>